--- a/src/components/SideMenu/SideMenu.css
+++ b/src/components/SideMenu/SideMenu.css
@@ -1,26 +1,39 @@
 body {
     color: #fff;
-    background-color: blueviolet;
-    font-family: Arial, sans-serif;
+    background-color: #2a3e59;
+    font-family: Arial, Helvetica, sans-serif; 
 }
 .SideMenu{
-    width: 22%;
+    width: 20%;
     position:fixed;
     display: block;
     float: left;
-    background-image: linear-gradient(to right, #c47cf7, #b769f2, #a956ec, #9a42e7, #8a2be2);
+    background-color: #4335ab;
+    margin-top: 50px;
+    /* background-image: linear-gradient(to right, #c47cf7, #b769f2, #a956ec, #9a42e7, #8a2be2); */
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.5); 
     transition: transform 0.9ms ease-out; 
     z-index: 10;  
 }
 
 .SideMenu h1{
-    margin-top: 20px;
     margin-left: 5%;
+    line-height: 1em;
+    text-transform: uppercase;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 600;
+    font-size: 2.6em;
+    letter-spacing: -.025em;
 
 }
 .SideMenu h5{
-    margin-left: 5%;   
+    margin-left: 5%;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 300;
+    font-size: 1.1em;
+    color: #c7c3e6;
+    letter-spacing: -.03em;  
+    margin-top: -20px;
  }
 .fa-twitter{
     margin-left: 20px;
@@ -29,7 +42,7 @@ body {
 
 .fa-facebook, .fa-search, .fa-linkedin, .fa-home, .fa-suitcase, .fa-comment, .fa-envelope{
     color: white;
-    padding: 10px;
+    padding: 8px;
     cursor: pointer;
 }
 .AwesomeFonts{
@@ -43,9 +56,9 @@ body {
     margin-left: 5%;
     margin-bottom: 10%;
     border-radius: 25px;
-    background-color: #C47CF7;
+    background-color:#362a89;
     width: 90%;
-    height:40px;
+    height:32px;
 }
 .SearchBar{
     background: transparent;
@@ -57,10 +70,12 @@ body {
 }
 
 .ListOptions{
-    border-top:  #fff solid 0.5px;
+    border-top:  #261f3d solid 0.1px;
     padding: 5px;
     display:block;
     cursor: pointer;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.125em;
 }
 
 .ListOptions:hover {
