--- a/src/containers/NewPost/NewPost.css
+++ b/src/containers/NewPost/NewPost.css
@@ -1,14 +1,12 @@
 .NewPost {
     width: 70%;
-    margin-top: 40px;
-    text-align: center;
+    margin-top: 80px; 
+    margin-left: 23%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 3px;
     box-sizing: border-box;
-    cursor: pointer;
     background-color:#fff;
     color: black;
-    
 }
 
 .NewPost label {
